--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,9 +2,9 @@ name: CI workflow
 
 on:
   push:
-    branches: push on main branch
+    branches: ["push on main branch"]
   pull_request:
-    branches: pull_request on main branch
+    branches: ["pull_request on main branch"]
 
 jobs:
   build:
